samples/_failures_safe/1761637227_0000eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b05b6fc2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b05b6fc2.c:167:13: error: expected declaration or statement at end of input
  167 |             pos++;
      |             ^~~
./samples/SAFE/__tmp_b05b6fc2.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b05b6fc2.c:167:13: error: expected declaration or statement at end of input
